tests/ui/const-generics/occurs-check/unused-substs-2.stderr
error[E0308]: mismatched types
  --> $DIR/unused-substs-2.rs:22:24
   |
LL |     let (mut t, foo) = Foo::bind();
   |                        ^^^^^^^^^^^ recursive type with infinite-size name

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
